--- a/Temas_acustica/Conceptos_basicos.html
+++ b/Temas_acustica/Conceptos_basicos.html
@@ -48,7 +48,7 @@
                 alrededor de sus posiciones de equilibrio. La propagación de las ondas acústicas se describe mediante la
                 ecuación de onda, que establece que la segunda derivada parcial de la presión con respecto al tiempo es
                 proporcional a la segunda derivada parcial de la presión con respecto al espacio (Kinsler et al., 2012).</p>
-            <img src="C:\Users\980022886\Downloads\ImagenesFisica\Acustica\Imagen3.png" alt="Propagacion de ondas">
+            <img src="/assets/img/ImagenesFisica/Acustica/Imagen3.png" alt="Propagacion de ondas">
             <p>(By IA)</p>
     
             <h2>Presión del Sonido</h2>
