--- a/Temas_acustica/Movimiento_armonico_simple.html
+++ b/Temas_acustica/Movimiento_armonico_simple.html
@@ -62,7 +62,7 @@
             </ul>
             <p>Según la Universidad Nacional del Litoral, "Controversias en el tratamiento del movimiento oscilatorio
                 armónico simple," la frecuencia angular ω se calcula como:</p>
-            <img src="C:\Users\980022886\Downloads\ImagenesFisica\Acustica\Imagen5.png" alt="Fórmula de frecuencia angular">
+            <img src="/assets/img/ImagenesFisica/Acustica/Imagen5.png" alt="Fórmula de frecuencia angular">
             <p>Donde:</p>
             <ul>
                 <li>f es la frecuencia.</li>
