--- a/Temas_optica/Angulo_critico_y_distancia_focal.html
+++ b/Temas_optica/Angulo_critico_y_distancia_focal.html
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div>
-            <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen12.png" alt="Ángulo Crítico">
+            <img src="/assets/img/ImagenesFisica/Optica/Imagen12.jpg" alt="Ángulo Crítico">
             <p>(PhysicsTutorials.org, n.d.)</p>
             <h2>Ángulo Crítico</h2>
             <p>El ángulo crítico es el ángulo de incidencia en el que el rayo de luz se propaga a lo largo de la
@@ -67,8 +67,7 @@
             <h3>Fórmula del Ángulo Crítico:</h3>
 
             <div>
-                <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen13.png"
-                    alt="Fórmula del Ángulo Crítico">
+                <img src="/assets/img/ImagenesFisica/Optica/Imagen13.jpg" alt="Fórmula del Ángulo Crítico">
                 <p>(PhysicsTutorials.org, n.d.)</p>
             </div>
         </div>
