--- a/Temas_optica/Angulo_de_brewster.html
+++ b/Temas_optica/Angulo_de_brewster.html
@@ -71,7 +71,7 @@
             minimizar los reflejos y aumentar la eficiencia de la transmisión de luz (Sme, 2024).</p>
 
         <div>
-            <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen15.png" alt="Ángulo de Brewster">
+            <img src="/assets/img/ImagenesFisica/Optica/Imagen15.jpg" alt="Ángulo de Brewster">
             <p><em>(Sme, 2024)</em></p>
         </div>
 
