--- a/Temas_optica/Dispositivos_iniciales_y_luz_de_fibras_opticas.html
+++ b/Temas_optica/Dispositivos_iniciales_y_luz_de_fibras_opticas.html
@@ -79,7 +79,7 @@
         <p>La fibra óptica se utiliza en diversas aplicaciones, como la creación de redes informáticas locales y de
             largo alcance, la transmisión de señales de televisión y radio, y la medición de variables físicas como la
             temperatura, la presión y los niveles de luz (Equipo editorial, Etecé, 2021).</p>
-        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen17.png" alt="Fibras Ópticas">
+        <img src="/assets/img/ImagenesFisica/Optica/Imagen17.jpg" alt="Fibras Ópticas">
         <p>(By IA)</p>
         <p>Chuang, SL (2012). Física de la Optoelectrónica. John Wiley e hijos.
             Unam, P. (2024). Título de la publicación. Revista de la Universidad Nacional Autónoma de México, 3(1),
