--- a/Temas_optica/Dualidad_onda_particula.html
+++ b/Temas_optica/Dualidad_onda_particula.html
@@ -105,7 +105,7 @@
             patrón de interferencia, lo que indica su comportamiento ondulatorio. Sin embargo, cuando se observan
             partículas, aparecen como puntos discretos, lo que indica su comportamiento similar a una partícula.
             (Ciencia XL, 2020).</p>
-        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen2.png" alt="Texto alternativo de la imagen">
+        <img src="/assets/img/ImagenesFisica/Optica/Imagen2.jpg" alt="Texto alternativo de la imagen">
         <p>(La Doble Rendija. -Experimento.- — Steemit, n.d.)</p>
         <p>La teoría de la dualidad onda-partícula tiene implicaciones importantes para nuestra comprensión de la
             naturaleza de la realidad. Sugiere que el comportamiento de las partículas no está determinado por sus
