--- a/Temas_optica/Fenomenos_de_luminiscencia.html
+++ b/Temas_optica/Fenomenos_de_luminiscencia.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <p class="text-break"><h2>Fenómenos de Luminiscencia</h2>
-            <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen18.png" alt="Fenómenos de Luminiscencia">
+            <img src="/assets/img/ImagenesFisica/Optica/Imagen18.jpg" alt="Fenómenos de Luminiscencia">
             <p>(PCC Group, 2023)</p>
     
             <p>La luminiscencia es la emisión de luz por un objeto que no está provocada por altas temperaturas, lo que la
