--- a/Temas_optica/Laseres.html
+++ b/Temas_optica/Laseres.html
@@ -62,7 +62,7 @@
             mediante un proceso de emisión estimulada. Desde su invención en 1960, los láseres han revolucionado
             numerosos campos, desde la medicina hasta las comunicaciones.</p>
 
-        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen16.png" alt="Láseres">
+        <img src="/assets/img/ImagenesFisica/Optica/Imagen16.jpg" alt="Láseres">
         <p>(By IA)</p>
 
         <p>Los láseres funcionan mediante la emisión estimulada de fotones, donde los átomos o moléculas excitados
