--- a/Temas_optica/Lentes_delgados.html
+++ b/Temas_optica/Lentes_delgados.html
@@ -77,14 +77,14 @@
             en un punto llamado foco de la imagen, a la derecha de la lente. Los lunes, los rayos divergen ("se
             separan") al pasar a través de la lente, por lo que el foco de la imagen se sitúa en el borde de la
             lente, donde convergen las prolongaciones de los rayos.</p>
-        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen7.png"
+        <img src="/assets/img/ImagenesFisica/Optica/Imagen7.jpg.png"
             alt="Imagen de la fórmula de las lentes delgadas">
         <p>(Fernández, n.d.)</p>
-        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen8.png"
+        <img src="/assets/img/ImagenesFisica/Optica/Imagen8.jpg"
             alt="Imagen de la fórmula de las lentes delgadas">
         <p>(Fernández, n.d.)</p>
         <h3>Fórmula de las lentes delgadas</h3>
-        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen3.png"
+        <img src="/assets/img/ImagenesFisica/Optica/Imagen3.jpg"
             alt="Imagen de la fórmula de las lentes delgadas">
         <p>(Física - No me salen, 2021)</p>
         <p>Donde:<br>
@@ -95,21 +95,21 @@
             Esta fórmula permite calcular la distancia focal de una lente delgada, dados sus índices de refracción y
             radios de curvatura. (Fernández, n.d.)</p>
         <h3>Ecuación Fundamental de las Lentes Delgadas</h3>
-        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen4.png"
+        <img src="/assets/img/ImagenesFisica/Optica/Imagen4.jpg"
             alt="Imagen de la ecuación fundamental de las lentes delgadas">
         <p>(Fernández, n.d.)</p>
         <p>Donde n′ y n son los índices de refracción de la lente y del medio respectivamente, s y s′ son las
             distancias del objeto y la imagen al origen O (situado en el centro de la lente), y R1 y R2 son los
             radios de curvatura de las superficies refractantes de la lente.</p>
         <h3>Distancias Focales y Potencia de la Lente</h3>
-        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen5.png"
+        <img src="/assets/img/ImagenesFisica/Optica/Imagen5.jpg"
             alt="Imagen de las distancias focales y potencia de la lente">
         <p>(Fernández, n.d.)</p>
         <p>La distancia focal (f) y la distancia focal imagen (f′) son medidas importantes en el estudio de las
             lentes delgadas, relacionadas con el foco objeto y el foco imagen respectivamente. La potencia de una
             lente (P) está definida en función de la distancia focal imagen (f′). (Fernández, n.d.)</p>
         <h3>Aumento Lateral</h3>
-        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen6.png" alt="Imagen del aumento lateral">
+        <img src="/assets/img/ImagenesFisica/Optica/Imagen6.jpg" alt="Imagen del aumento lateral">
         <p>(Fernández, n.d.)</p>
         <p>El aumento lateral (AL) es una medida de la ampliación o reducción de una imagen en comparación con el
             objeto original. Se define como la relación entre la altura de la imagen (y′) y la altura del objeto
