--- a/Temas_optica/Luz_polarizada_y_no_polarizada.html
+++ b/Temas_optica/Luz_polarizada_y_no_polarizada.html
@@ -64,7 +64,7 @@
             polarizada en una superficie, donde la luz reflejada se polariza horizontalmente debido a la preferencia de
             refracción de la luz polarizada verticalmente en la superficie (Moebs et al., 2021).
         </p>
-        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen11.png" alt="Polarizacion optica">
+        <img src="/assets/img/ImagenesFisica/Optica/Imagen11.jpg" alt="Polarizacion optica">
         <p>(By IA)</p>
         <p>
             La polarización tiene aplicaciones prácticas en diversos campos, como en la tecnología de pantallas de
