--- a/Temas_optica/Ondas_electromagneticas.html
+++ b/Temas_optica/Ondas_electromagneticas.html
@@ -68,7 +68,7 @@
             gases, líquidos y sólidos. Las características de propagación dependen de las propiedades del medio, como su
             permitividad y permeabilidad, así como de la frecuencia de la onda. Algunos medios pueden absorber o
             reflejar ondas electromagnéticas, mientras que otros pueden dejarlas pasar con poca atenuación.</p>
-        <img src="C:\Users\980022886\Downloads\ImagenesFisica\Optica\Imagen10.png" alt="Onda electromagnética">
+        <img src="/assets/img/ImagenesFisica/Optica/Imagen10.jpg" alt="Onda electromagnética">
         <p>(Tomé, 2017)</p>
     </div>
 
