--- a/Temas_acustica/Sonido.html
+++ b/Temas_acustica/Sonido.html
@@ -46,7 +46,7 @@
                 física, el estudio del sonido implica comprender las propiedades de las ondas sonoras, su propagación y cómo
                 interactúan con el entorno. Este ensayo profundizará en los conceptos fundamentales del sonido desde un
                 punto de vista físico, cubriendo temas como las ondas sonoras, la amplitud, el tono y la resonancia.</p>
-            <img src="C:\Users\980022886\Downloads\ImagenesFisica\Acustica\Imagen4.png" alt="Historia acústica1">
+            <img src="/assets/img/ImagenesFisica/Acustica/Imagen4.png" alt="Historia acústica1">
             <p>(By IA)</p>
     
             <h2>Ondas Sonoras</h2>
