--- a/Sobre_nosotros.html
+++ b/Sobre_nosotros.html
@@ -47,7 +47,7 @@
         <div class="row mb-5">
             <div class="col-md-8 col-xl-6 text-center mx-auto">
                 <h2>QUIENES SOMOS?</h2>
-                <p class="w-lg-50">Curae hendrerit donec commodo hendrerit egestas tempus, turpis facilisis nostra nunc. Vestibulum dui eget ultrices.</p>
+                <p class="w-lg-50"></p>
             </div>
         </div>
         <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-lg-3">
@@ -56,7 +56,7 @@
                     <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="/assets/img/nosotros/ga.jpg">
                         <div>
                             <h5 class="fw-bold text-primary mb-0">Gabriel Manzano Ruiz</h5>
-                            <p class="text-muted mb-1">Erat netus</p>
+                            <p class="text-muted mb-1"></p>
                             <ul class="list-inline fs-6 text-muted w-100 mb-0">
                                 <li class="list-inline-item text-center">
                                     <div class="d-flex flex-column align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook">
@@ -78,7 +78,7 @@
                     <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="assets/img/nosotros/yo.jpg">
                         <div>
                             <h5 class="fw-bold text-primary mb-0"><strong>Jose Miguel Perusquia Hernandez</strong></h5>
-                            <p class="text-muted mb-1">Erat netus</p>
+                            <p class="text-muted mb-1"></p>
                             <ul class="list-inline fs-6 text-muted w-100 mb-0">
                                 <li class="list-inline-item text-center">
                                     <div class="d-flex flex-column align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook">
@@ -100,7 +100,7 @@
                     <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="assets/img/nosotros/al.jpg">
                         <div>
                             <h5 class="fw-bold text-primary mb-0"><strong>Alexis Guadarrama Cruz    </strong></h5>
-                            <p class="text-muted mb-1">Erat netus</p>
+                            <p class="text-muted mb-1"></p>
                             <ul class="list-inline fs-6 text-muted w-100 mb-0">
                                 <li class="list-inline-item text-center">
                                     <div class="d-flex flex-column align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook">
@@ -122,7 +122,7 @@
                     <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="/assets/img/nosotros/ya.jpg">
                         <div>
                             <h5 class="fw-bold text-primary mb-0">Jonathan Yahir Contreras</h5>
-                            <p class="text-muted mb-1">Erat netus</p>
+                            <p class="text-muted mb-1"></p>
                             <ul class="list-inline fs-6 text-muted w-100 mb-0">
                                 <li class="list-inline-item text-center">
                                     <div class="d-flex flex-column align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook">
@@ -144,7 +144,7 @@
                     <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="assets/img/nosotros/v8.jpg">
                         <div>
                             <h5 class="fw-bold text-primary mb-0"><strong>Comandante V8</strong></h5>
-                            <p class="text-muted mb-1">Erat netus</p>
+                            <p class="text-muted mb-1"></p>
                             <ul class="list-inline fs-6 text-muted w-100 mb-0">
                                 <li class="list-inline-item text-center">
                                     <div class="d-flex flex-column align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook">
@@ -166,7 +166,7 @@
                     <div class="card-body d-flex align-items-center p-0"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="130" height="130" src="assets/img/nosotros/ma.jpg">
                         <div>
                             <h5 class="fw-bold text-primary mb-0"><strong>Marian Lizeth Hernandez Garcia</strong></h5>
-                            <p class="text-muted mb-1">Erat netus</p>
+                            <p class="text-muted mb-1"></p>
                             <ul class="list-inline fs-6 text-muted w-100 mb-0">
                                 <li class="list-inline-item text-center">
                                     <div class="d-flex flex-column align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-facebook">
